tests/ui/lifetimes/raw/gen-lt.e2024.stderr
error: lifetimes cannot use keyword names
  --> $DIR/gen-lt.rs:10:11
   |
LL | fn gen_lt<'gen>() {}
   |           ^^^^

error: aborting due to 1 previous error

